--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@
 /build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/object_script.worldserver.Release
 /worldserver/WorldServer.pro.user
 /authserver/AuthServer.pro.user
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/authserver.conf
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/authserver.log
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/worldserver.conf
+/build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/authserver.conf
+/build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/worldserver.conf
