- Checking client version and returning packet if bad version.
Signed-off-by: Kevin <kevainxxx@gmail.com>

--- a/config/authserver.conf
+++ b/config/authserver.conf
@@ -18,6 +18,13 @@ AuthServerPort = 444
 AuthDatabase = 127.0.0.1:3306:root::wakbox_auth
 
 ##
+# AcceptClientVersion
+# Description: Define which client version can connect to the server.
+# Default: 1.28.2
+
+AcceptClientVersion = 1.28.3
+
+##
 # LogConsoleLevel
 #       Description: Console level of logging.
 #       Default:     0 - (Normal)
