Removing the AuthServer part because Wakfu use only one connection (= one world)...
Signed-off-by: Kevin <kevainxxx@gmail.com>

--- a/config/worldserver.conf
+++ b/config/worldserver.conf
@@ -5,30 +5,25 @@
 ##
 # WorldServerPort
 #       Description: TCP port to reach the world server.
-#       Default:     5555
+#       Default:     444
 
-WorldServerPort = 5555
+WorldServerPort = 444
 
 ##
-# CharDatabase
-#       Description: MySQL character database connection informations.
+# Databases
+#       Description: MySQL databases connection informations.
 #       Example:     hostname;port;username;password;database
-#       Default:     127.0.0.1:3306:root::wakbox_char
+#       Default:     127.0.0.1:3306:root::wakbox_{auth/char/world}
 
+AuthDatabase = 127.0.0.1:3306:root::wakbox_auth
 CharDatabase = 127.0.0.2:3306:root::wakbox_char
-
-##
-# WorldDatabase
-#       Description: MySQL world database connection informations.
-#       Example:     hostname;port;username;password;database
-#       Default:     127.0.0.1:3306:root::wakbox_world
-
 WorldDatabase = 127.0.0.2:3306:root::wakbox_world
 
 ##
 # ServerId
-#		Description: World Server identifiant, also written in AuthDatabase::realmlist
+#		Description: World Server identifiant
 #		Exemple: 	 1
+#       Default:     1
 
 ServerId = 1
 
@@ -39,7 +34,7 @@ ServerId = 1
 #                    1 - (Detail)
 #                    2 - (Debug)
 
-LogConsoleLevel = 0
+LogConsoleLevel = 2
 
 ##
 # LogFileLevel
@@ -48,7 +43,7 @@ LogConsoleLevel = 0
 #                    1 - (Detail)
 #                    2 - (Debug)
 
-LogFileLevel = 0
+LogFileLevel = 2
 
 ##
 # LogFile
