- Packet handling until character selection (hardcoded).
Signed-off-by: Kevin <kevainxxx@gmail.com>

--- a/config/worldserver.conf
+++ b/config/worldserver.conf
@@ -28,6 +28,13 @@ WorldDatabase = 127.0.0.2:3306:root::wakbox_world
 ServerId = 1
 
 ##
+# AcceptClientVersion
+# Description: Define which client version can connect to the server.
+# Default: 1.28.2
+
+AcceptClientVersion = 1.28.2
+
+##
 # LogConsoleLevel
 #       Description: Console level of logging.
 #       Default:     0 - (Normal)
