--- a/config/worldserver.conf
+++ b/config/worldserver.conf
@@ -20,12 +20,12 @@ CharDatabase = 127.0.0.2:3306:root::wakbox_char
 WorldDatabase = 127.0.0.2:3306:root::wakbox_world
 
 ##
-# ServerId
-#		Description: World Server identifiant
-#		Exemple: 	 1
+# WorldId
+#	Description: World Server identifiant (entry in world_list table)
+#	Exemple:     1
 #       Default:     1
 
-ServerId = 1
+WorldId = 1
 
 ##
 # AcceptClientVersion
