--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@
 /build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/libmysql.dll
 /build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/worldserver.log
 /worldserver/WorldServer.pro.user.32b334c
+/build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/
+/build-WorldServer-Desktop_Qt_5_2_0_GCC_64bit-Debug/
+/WorldServer-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/
