Update to support client 1.39.4
- Add authserver because now it's separated.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@
 /build-WorldServer-Desktop_Qt_5_0_2_MinGW_32bit-Debug/
 /build-WorldServer-Desktop_Qt_5_2_0_GCC_64bit-Debug/
 /WorldServer-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/
+/build-AuthServer-Desktop_Qt_5_4_0_MinGW_32bit-Debug/*
+/build-WorldServer-Desktop_Qt_5_4_0_MinGW_32bit-Debug/*
