Opcodehandler access restriction for worldserver.
Few config/database handling changes.

--- a/config/worldserver.conf
+++ b/config/worldserver.conf
@@ -5,9 +5,9 @@
 ##
 # WorldServerPort
 #       Description: TCP port to reach the world server.
-#       Default:     444
+#       Default:     5556
 
-WorldServerPort = 444
+WorldServerPort = 5556
 
 ##
 # Databases
@@ -21,18 +21,11 @@ WorldDatabase = 127.0.0.2:3306:root::wakbox_world
 
 ##
 # WorldId
-#	Description: World Server identifiant (entry in world_list table)
+#	Description: World Server identifiant (entry in AuthDatabase.realms table)
 #	Exemple:     1
 #       Default:     1
 
 WorldId = 1
-
-##
-# AcceptClientVersion
-# Description: Define which client version can connect to the server.
-# Default: 1.28.2
-
-AcceptClientVersion = 1.28.2
 
 ##
 # LogConsoleLevel
