--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,224 @@
 /WorldServer-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/
 /build-AuthServer-Desktop_Qt_5_4_0_MinGW_32bit-Debug/*
 /build-WorldServer-Desktop_Qt_5_4_0_MinGW_32bit-Debug/*
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/.gitignore
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/Makefile
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/Makefile.Debug
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/Makefile.Release
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/authserver.conf
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/authserver.log
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/cryptography/wakbox.ppk
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/cryptography/wakbox.pub
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/libmysql.dll
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/object_script.authserver.Debug
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/object_script.authserver.Release
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/AuthDatabase.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/AuthServer.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/AuthSession.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/CharDatabase.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/ConfigMgr.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/Configuration.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/CryptographyMgr.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/Database.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/Log.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/MysqlConnection.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/Util.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/WorldDatabase.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/authserver.exe
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/main.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_AuthServer.cpp
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_AuthServer.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_AuthSession.cpp
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_AuthSession.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_SocketHandler.cpp
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/release/moc_SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_0_2_MinGW_32bit-Release/worldserver.conf
+/authserver/AuthServer.pro.user.9e04602.18
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Debug
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Release
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/authserver.conf
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/AuthDatabase.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/AuthServer.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/AuthSession.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CharDatabase.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ConfigMgr.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Configuration.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CryptographyMgr.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Database.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Log.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/MysqlConnection.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Qt5Cored.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Qt5Networkd.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Qt5Sqld.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Util.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/WorldDatabase.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/authserver.exe
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/icudt52.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/icuin52.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/icuuc52.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/libgcc_s_dw2-1.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/libwinpthread-1.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/main.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_AuthServer.cpp
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_AuthServer.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_AuthSession.cpp
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_AuthSession.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_SocketHandler.cpp
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/libmysql.dll
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/object_script.authserver.Debug
+/build-AuthServer-Desktop_Qt_5_3_MinGW_32bit-Debug/object_script.authserver.Release
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile.Debug
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile.Release
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/authserver.conf
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/authserver.log
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/cryptography/wakbox.ppk
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/cryptography/wakbox.pub
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/AuthDatabase.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/AuthServer.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/AuthSession.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CharDatabase.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ConfigMgr.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Configuration.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CryptographyMgr.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Database.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Log.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/MysqlConnection.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Util.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/WorldDatabase.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/authserver.exe
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/main.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_AuthServer.cpp
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_AuthServer.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_AuthSession.cpp
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_AuthSession.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_SocketHandler.cpp
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_SocketHandler.o
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/libmysql.dll
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/object_script.authserver.Debug
+/build-AuthServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/object_script.authserver.Release
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Debug
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/Makefile.Release
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/authserver.conf
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/AccountMgr.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/AuthDatabase.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CharDatabase.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Character.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CharacterHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CharacterSerialization.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Chat.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ChatHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CompanionHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ConfigMgr.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Configuration.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/CryptographyMgr.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Database.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ExampleOnLoadHook.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/FightHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/FirstFight.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/GroupHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Log.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/LoginHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/MiscHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Monster.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/MovementHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/MysqlConnection.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Object.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ObjectMgr.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Opcodes.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ScriptLoader.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/ScriptMgr.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/SocketHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/SystemHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/TimeHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Unit.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/Util.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/World.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/WorldDatabase.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/WorldHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/WorldServer.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/WorldSession.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/main.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_CommandLine.cpp
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_CommandLine.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_SocketHandler.cpp
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_SocketHandler.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldRunnable.cpp
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldRunnable.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldServer.cpp
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldServer.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldSession.cpp
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/moc_WorldSession.o
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/debug/worldserver.exe
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/libmysql.dll
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/object_script.worldserver.Debug
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/object_script.worldserver.Release
+/build-WorldServer-Desktop_Qt_5_3_MinGW_32bit-Debug/worldserver.conf
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile.Debug
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/Makefile.Release
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/authserver.conf
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/cryptography/wakbox.ppk
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/cryptography/wakbox.pub
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/AccountMgr.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/AuthDatabase.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CharDatabase.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Character.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CharacterHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CharacterSerialization.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Chat.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ChatHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CompanionHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ConfigMgr.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Configuration.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/CryptographyMgr.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Database.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ExampleOnLoadHook.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/FightHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/FirstFight.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/GroupHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Log.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/LoginHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/MiscHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Monster.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/MovementHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/MysqlConnection.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Object.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ObjectMgr.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Opcodes.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ScriptLoader.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/ScriptMgr.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/SocketHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/SystemHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/TimeHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Unit.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/Util.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/World.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/WorldDatabase.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/WorldHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/WorldServer.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/WorldSession.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/main.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_CommandLine.cpp
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_CommandLine.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_SocketHandler.cpp
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_SocketHandler.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldRunnable.cpp
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldRunnable.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldServer.cpp
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldServer.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldSession.cpp
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/moc_WorldSession.o
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/debug/worldserver.exe
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/libmysql.dll
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/object_script.worldserver.Debug
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/object_script.worldserver.Release
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/worldserver.conf
+/build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/worldserver.log
+/worldserver/WorldServer.pro.user.9e04602.18
