Update GitIgnore list.

--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,30 @@
 /build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/worldserver.conf
 /build-WorldServer-Desktop_Qt_5_6_0_MinGW_32bit-Debug/worldserver.log
 /worldserver/WorldServer.pro.user.9e04602.18
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/.qmake.stash
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/AuthDatabase.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/authserver
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/authserver.conf
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/authserver.log
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/AuthServer.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/AuthSession.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/CharDatabase.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/ConfigMgr.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Configuration.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/CryptographyMgr.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Database.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Log.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/main.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Makefile
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_AuthServer.cpp
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_AuthServer.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_AuthSession.cpp
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_AuthSession.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_SocketHandler.cpp
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/moc_SocketHandler.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/MysqlConnection.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/SocketHandler.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Util.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/WorldDatabase.o
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.ppk
+build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.pub
