--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,4 @@ build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/Util.o
 build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/WorldDatabase.o
 build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.ppk
 build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.pub
+build-AuthServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/
