Update to support client 1.51.0

--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,66 @@ build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/WorldDatabase.o
 build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.ppk
 build-AuthServer-Desktop_Qt_5_7_1_clang_64bit-Debug/cryptography/wakbox.pub
 build-AuthServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/.qmake.stash
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Debug
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Release
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/authserver.conf
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/cryptography/wakbox.ppk
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/cryptography/wakbox.pub
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/AccountMgr.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/AuthDatabase.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/CharDatabase.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Character.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/CharacterHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/CharacterSerialization.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Chat.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ChatHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/CompanionHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ConfigMgr.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Configuration.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/CryptographyMgr.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Database.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ExampleOnLoadHook.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/FightHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/FirstFight.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/GroupHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Log.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/LoginHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/MiscHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Monster.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/MovementHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/MysqlConnection.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Object.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ObjectMgr.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Opcodes.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ScriptLoader.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/ScriptMgr.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/SocketHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/SystemHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/TimeHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Unit.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/Util.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/World.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/WorldDatabase.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/WorldHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/WorldServer.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/WorldSession.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/main.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_CommandLine.cpp
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_CommandLine.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_SocketHandler.cpp
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_SocketHandler.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldRunnable.cpp
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldRunnable.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldServer.cpp
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldServer.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldSession.cpp
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_WorldSession.o
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/moc_predefs.h
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/worldserver.exe
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/libmysql.dll
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/object_script.worldserver.Debug
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/object_script.worldserver.Release
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/worldserver.conf
+build-WorldServer-Desktop_Qt_5_8_0_MinGW_32bit-Debug/worldserver.log
