Realm online/offline.

--- a/config/worldserver.conf
+++ b/config/worldserver.conf
@@ -19,12 +19,12 @@ CharDatabase = 127.0.0.1:3306:root::wakbox_char
 WorldDatabase = 127.0.0.1:3306:root::wakbox_world
 
 ##
-# WorldId
+# RealmId
 #	Description: World Server identifiant (entry in AuthDatabase.realms table)
 #	Exemple:     1
 #       Default:     1
 
-WorldId = 1
+RealmId = 1
 
 ##
 # LogConsoleLevel
